Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10586

Flicking stops animation

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.0
    • 4.7.1
    • None
    • 64 bit linux, Qt rev 03f8f1df0d88f5ffe0b3120cffce614cbeefdb70
    • 5e843ec092e2d236bd51f015b136db3fca5c10ba

    Description

      This is as small a testcase as I could get:

      import Qt 4.7
      
      Item {
          width: 400
          height: 400
          Flickable {
              id: flick
              anchors.fill: parent
              contentWidth: 1000; contentHeight: parent.height
              Rectangle {
                  border.color: "black"
                  border.width: 10
                  width: 1000; height: 1000
                  rotation: 90
                  gradient: Gradient {
                      GradientStop { position: 0; color: "black" }
                      GradientStop { position: 1; color: "white" }
                  }
              }
          }
          Rectangle {
              color: "red"
              width: 100; height: 100
              opacity: flick.contentX < 10 ? 1 : 0
              Behavior on opacity { NumberAnimation {} }
          }
      }
      

      As long as you are moving the visible area of the Flickable by keeping the left mouse button pressed, the opacity of the outer Rectangle updates correctly. If you flick the Flickable though, the animation stops when you release the mouse button. It resumes as soon as the flick ends.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            brasser Michael Brasser (closed Nokia identity) (Inactive)
            ckamm Christian Kamm
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes