Bail out early if the same target value is reassigned to a Behavior.

Task-number: QTBUG-10586
Reviewed-by: leo